# algorithmic-thinking

./: CMakeLists.txt
food_lines/: food_lines.c
login_mayhem/: login_mayhem.c  login_mayhem_interger_packing.c
unique_snowflakes/: input1.txt  input2.txt  main  main.out  unique_snowflakes.c
